test/tests/bad/redundant-case.carth
;; RedundantCase

(define foo
  (fun*
    (case [True] 0)
    (case [True] 1)
    (case [False] 2)))
